// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Large modal component should render component correctly 1`] = `
<div
  className="modal close__modal"
>
  <section
    className="modal__body"
  >
    <p
      className="modal__title"
    />
    <button
      className="close"
      onClick={[MockFunction]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
      <span
        className="sr-only"
      >
        Close
      </span>
    </button>
    <div>
      Hello
    </div>
  </section>
</div>
`;

exports[`Test Large modal component should render large modal 1`] = `
<div
  className="modal display__modal"
>
  <section
    className="modal__body"
  >
    <p
      className="modal__title"
    />
    <button
      className="close"
      onClick={
        [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
      <span
        className="sr-only"
      >
        Close
      </span>
    </button>
    <div>
      Hello
    </div>
  </section>
</div>
`;
